ontol/ontol-compiler/test-cases/error/lexer/lex.on
; // ERROR lex error: illegal character `;`// ERROR lex error: illegal character `;`// ERROR parse error: found `/`, expected one of `use`, `def`, `rel`, `fmt`, `map`
